--- a/Areas/Admin/Views/Categories/Create.cshtml
+++ b/Areas/Admin/Views/Categories/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
-<h2>Create</h2>
+<h2>Thêm sản phẩm   </h2>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
